--- a/site_generator/_config.yml
+++ b/site_generator/_config.yml
@@ -31,7 +31,10 @@ destination: ../html/
 # Build settings
 theme: minima
 plugins:
-  - jekyll-feed
+  - jekyll-optional-front-matter
+
+optional_front_matter:
+  remove_originals: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -53,3 +56,6 @@ exclude:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+include:
+  - README.md
